@@ -37,8 +37,6 @@ def simple_auto_app(environ, start_response):
     session['value'] += 1
     if environ['PATH_INFO'].startswith('/nosave'):
         session.revert()
-    else:
-        session.save()
     start_response('200 OK', [('Content-type', 'text/plain')])
     return ['The current value is: %d, session id is %s' % (session.get('value', 0),
                                                             session.id)]
@@ -95,15 +93,12 @@ def test_nosave():
     app = TestApp(SessionMiddleware(simple_app))
     res = app.get('/nosave')
     assert 'current value is: 1' in res
-    assert [] == res.headers.getall('Set-Cookie')
     res = app.get('/nosave')
     assert 'current value is: 1' in res
     
     res = app.get('/')
     assert 'current value is: 1' in res
-    assert len(res.headers.getall('Set-Cookie')) > 0
     res = app.get('/')
-    assert [] == res.headers.getall('Set-Cookie')
     assert 'current value is: 2' in res
 
 def test_revert():
